--- a/alertmanager/config.yml
+++ b/alertmanager/config.yml
@@ -1,3 +1,12 @@
+global:
+  smtp_smarthost: 'localhost:25'
+  smtp_from: 'alertmanager@prometheus.com'
+  smtp_auth_username: ''
+  smtp_auth_password: ''
+
+templates:
+- '/etc/alertmanager/template/*.tmpl'
+
 route:
   repeat_interval: 2h
   receiver: email-1
@@ -28,3 +37,8 @@ receivers:
     auth_username: "<user-name>"
     auth_identity: "<user-name>"
     auth_password: "<user-app-specific-password>"
+  slack_configs:
+  - api_url: https://hooks.slack.com/services/XXXXXX/XXXXXX/XXXXXX
+    channel: '#prometheus-course'
+    send_resolved: true
+
